--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         run:  docker compose build
 
       - name: Run Tests
-        run:  docker compose run pytest tests/
+        run:  docker compose run --rm fastapi pytest
 
       - name: Tear down the Stack
         run:  docker compose down
